--- a/views/home.html
+++ b/views/home.html
@@ -52,19 +52,21 @@
             </div>
 
             <div class="mainContainer splitSection">
-                <div class="main-heading easingClass">
-                    <h1>who<span class="md-br">we</span><span class="md-br">are</span></h1>
-                </div>
-
-                <div class="main-words">
-                    <div class="section-words easingClass">
-                        <h1>Who</h1>
-                        <p>Specializing in the whole spectrum of branding, we help our clients with existing or new brands build strategic plans, conceptualize and establish an impactful visual identity that reflects the brand's heart and soul. Our projects cover a large variety of industries, some of which include real estate property management / developers, fashion, pharmaceuticals, jewelry showcase designs, co-working spaces, retail sourcing agencies and more.</p>
+                <div class="fix-container">
+                    <div class="main-heading easingClass">
+                        <h1>who<span class="md-br">we</span><span class="md-br">are</span></h1>
                     </div>
 
-                    <div class="section-words easingClass">
-                        <h1>Wesuperseed community</h1>
-                        <p>WeSuperseed is a community of likeminded, multi-cultrual, innovative, passionate creators at heart aiming to use innovation and divergent creativity to alter and inspire minds. At WeSuperseed, we're always looking for creative minds to join us. We're aiming to grow a platform of creative thinkers that may be looking for work or that need assistance with their projects on hand.</p>
+                    <div class="main-words">
+                        <div class="section-words easingClass">
+                            <h1>Who</h1>
+                            <p>Specializing in the whole spectrum of branding, we help our clients with existing or new brands build strategic plans, conceptualize and establish an impactful visual identity that reflects the brand's heart and soul. Our projects cover a large variety of industries, some of which include real estate property management / developers, fashion, pharmaceuticals, jewelry showcase designs, co-working spaces, retail sourcing agencies and more.</p>
+                        </div>
+
+                        <div class="section-words easingClass">
+                            <h1>Wesuperseed community</h1>
+                            <p>WeSuperseed is a community of likeminded, multi-cultrual, innovative, passionate creators at heart aiming to use innovation and divergent creativity to alter and inspire minds. At WeSuperseed, we're always looking for creative minds to join us. We're aiming to grow a platform of creative thinkers that may be looking for work or that need assistance with their projects on hand.</p>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -94,13 +96,15 @@
 
         <section class="section section-home-contact">
             <div class="mainContainer splitSection">
-                <div class="main-heading easingClass">
-                    <h1>let's<span class="md-br">have a</span><span class="md-br">chat</span></h1>
-                </div>
+                <div class="fix-container">
+                    <div class="main-heading easingClass">
+                        <h1>let's<span class="md-br">have a</span><span class="md-br">chat</span></h1>
+                    </div>
 
-                <div class="main-words">
-                    <div class="section-words easingClass">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda quas, eos officia facere repudiandae dolore obcaecati rem cum nam, ut sed amet eaque numquam. Debitis incidunt voluptatibus fuga quibusdam error.</p>
+                    <div class="main-words">
+                        <div class="section-words easingClass">
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda quas, eos officia facere repudiandae dolore obcaecati rem cum nam, ut sed amet eaque numquam. Debitis incidunt voluptatibus fuga quibusdam error.</p>
+                        </div>
                     </div>
                 </div>
             </div>
