--- a/views/home.html
+++ b/views/home.html
@@ -87,8 +87,12 @@
                     <div class="main-heading easingClass">
                         <h1>our clients</h1>
                     </div>
-                    <figure class="clients-img easingClass">
-                        <img src="/images/main/client-logos.png" alt="">
+                    <figure class="clients-img clients-desktop easingClass">
+                        <img src="/images/main/client-logos-desktop.svg" alt="">
+                    </figure>
+
+                    <figure class="clients-img clients-mobile easingClass">
+                        <img src="/images/main/client-logos-mobile.svg" alt="">
                     </figure>
                 </div>
             </div>
@@ -110,12 +114,12 @@
             </div>
 
             <footer class="footer">
-                <div class="contact-button">
+                <a class="contact-button" href="mailto:brian@wesuperseed.com">
                     <h2 class="contact-text easingClass">Plant a seed</h2>
                     <figure class="contact-img easingClass">
                         <img src="/images/main/contact-button.png" alt="">
                     </figure>
-                </div>
+                </a>
                 <div class="footer-contents">
                     <figure class="footer-img">
                         <img src="/images/main/logo-large.svg" alt="">
