updates animation effects

--- a/views/home.html
+++ b/views/home.html
@@ -32,8 +32,17 @@
 
             <div class="mainContainer">
                 <div class="logo-container">
-                    <figure class="logo-image easingClass">
-                        <img src="/images/main/logo-large.svg" alt="">
+                    <figure class="logo-image easingClass" id="partial-one">
+                        <img src="/images/main/logo-large1.svg" alt="">
+                    </figure>
+                    <figure class="logo-image overlayed easingClass" id="partial-two">
+                        <img src="/images/main/logo-large2.svg" alt="">
+                    </figure>
+                    <figure class="logo-image overlayed easingClass" id="partial-three">
+                        <img src="/images/main/logo-large3.svg" alt="">
+                    </figure>
+                    <figure class="logo-image overlayed easingClass" id="partial-four">
+                        <img src="/images/main/logo-large4.svg" alt="">
                     </figure>
                 </div>
 
@@ -53,8 +62,8 @@
 
             <div class="mainContainer splitSection">
                 <div class="fix-container">
-                    <div class="main-heading easingClass">
-                        <h1>who<span class="md-br">we</span><span class="md-br">are</span></h1>
+                    <div class="main-heading">
+                        <h1 class="easingClass">who<span class="md-br">we</span><span class="md-br">are</span></h1>
                     </div>
 
                     <div class="main-words">
@@ -84,8 +93,8 @@
 
             <div class="mainContainer">
                 <div class="clients-container">
-                    <div class="main-heading easingClass">
-                        <h1>our clients</h1>
+                    <div class="main-heading">
+                        <h1 class="easingClass">our clients</h1>
                     </div>
                     <figure class="clients-img clients-desktop easingClass">
                         <img src="/images/main/client-logos-desktop.svg" alt="">
@@ -101,8 +110,8 @@
         <section class="section section-home-contact">
             <div class="mainContainer splitSection">
                 <div class="fix-container">
-                    <div class="main-heading easingClass">
-                        <h1>let's<span class="md-br">have a</span><span class="md-br">chat</span></h1>
+                    <div class="main-heading">
+                        <h1 class="easingClass">let's<span class="md-br">have a</span><span class="md-br">chat</span></h1>
                     </div>
 
                     <div class="main-words">
