--- a/public/css/global.css
+++ b/public/css/global.css
@@ -463,14 +463,57 @@ section.section-home-main {
     height: 100%;
 
     .logo-container {
+      position: relative;
       width: 80%;
-      .logo-image {
-        max-width: 700px;
-        margin: 0 auto;
-        opacity: 0;
+      max-width: 700px;
+      overflow: hidden;
 
-        &.animate {
-          opacity: 1;
+      .logo-image {
+        top: 0;
+        left: 0;
+        width: 100%;
+        margin: 0 auto;
+
+        &#partial-one {
+          transition-delay: 800ms;
+          transform: translateX(-50%);
+        }
+
+        &#partial-two {
+          opacity: 0;
+          transition-delay: 1200ms;
+        }
+
+        &#partial-three {
+          transition-delay: 1600ms;
+          transform: translateX(-100%);
+        }
+
+        &#partial-four {
+          transition-delay: 2000ms;
+          transform: translateX(100%);
+        }
+
+        &.overlayed {
+          position: absolute;
+        }
+      }
+
+      &.animate {
+        .logo-image {
+          &#partial-one {
+            transform: translateX(0);
+          }
+          &#partial-two {
+            opacity: 1;
+            transform: translateX(0);
+          }
+          &#partial-three {
+            transform: translateX(0);
+          }
+          &#partial-four {
+            transform: translateX(0);
+          }
         }
       }
     }
@@ -484,6 +527,7 @@ section.section-home-main {
       &.splashHeading {
         transform: translateY(100px);
         opacity: 0;
+        transition-delay: 2400ms;
       }
 
       &.animate {
@@ -535,8 +579,12 @@ section.section-home-about {
     }
 
     .main-heading {
-      opacity: 0;
-      transform: translateX(-100px);
+      h1 {
+        color: transparent;
+        text-shadow: 0 0 50px $main-blue;
+        opacity: 0;
+        transform: scaleX(1.5);
+      }
     }
 
     .section-words {
@@ -545,76 +593,37 @@ section.section-home-about {
       opacity: 0;
 
       &:nth-of-type(1) {
-        transform: translateX(100px);
-        transition-delay: 700ms;
+        transform: scaleX(1.5);
+        transition-delay: 1200ms;
       }
 
       &:nth-of-type(2) {
-        transform: translateX(100px);
-        transition-delay: 900ms;
+        transform: scaleX(1.5);
+        transition-delay: 1400ms;
       }
     }
   }
 
   &.active {
     .main-heading {
-      opacity: 1;
-      transform: translateX(0);
+      h1 {
+        text-shadow: 0 0 1px $main-blue;
+        opacity: 1;
+        transform: scaleX(1);
+      }
     }
 
     .section-words {
       opacity: 1;
 
       &:nth-of-type(1) {
-        transform: translateX(0);
+        transform: scaleX(1);
       }
 
       &:nth-of-type(2) {
-        transform: translateX(0);
+        transform: scaleX(1);
       }
     }
-  }
-}
-
-@media (max-width: 991px) {
-  section.section-home-about {
-    .mainContainer {
-      .main-heading {
-        transform: translateX(0) translateY(100px);
-      }
-
-      .section-words {
-        &:nth-of-type(1) {
-          transform: translateX(0) translateY(100px);
-        }
-
-        &:nth-of-type(2) {
-          transform: translateX(0) translateY(100px);
-        }
-      }
-    }
-
-    &.active {
-      .main-heading {
-        transform: translateY(0);
-      }
-
-      .section-words {
-
-        &:nth-of-type(1) {
-          transform: translateY(0);
-        }
-
-        &:nth-of-type(2) {
-          transform: translateY(0);
-        }
-      }
-    }
-  }
-}
-
-@media (max-width: 768px) {
-  section.section-home-about {
   }
 }
 
@@ -632,11 +641,12 @@ section.section-home-clients {
 
       .main-heading {
         margin-bottom: 60px;
-        transform: translateY(100px);
-        opacity: 0;
 
         h1 {
-          color: $main-white;
+          color: transparent;
+          text-shadow: 0 0 50px $main-white;
+          opacity: 0;
+          transform: scaleX(1.5);
         }
       }
 
@@ -645,8 +655,8 @@ section.section-home-clients {
         padding: 0 20px;
         margin: 0 auto;
         opacity: 0;
-        transform: translateY(100px);
-        transition-delay: 700ms;
+        transform: scaleX(1.3);
+        transition-delay: 1000ms;
 
         &.clients-desktop {
           max-width: 800px;
@@ -665,13 +675,16 @@ section.section-home-clients {
     .mainContainer {
       .clients-container {
         .main-heading {
-          opacity: 1;
-          transform: translateY(0);
+          h1 {
+            opacity: 1;
+            text-shadow: 0 0 1px $main-white;
+            transform: scale(1);
+          }
         }
 
         .clients-img {
           opacity: 1;
-          transform: translateY(0)
+          transform: scaleX(1)
         }
       }
     }
@@ -703,9 +716,13 @@ section.section-home-contact {
 
     .main-heading {
       flex: 0 1 40%;
-      transform: translateX(-100px);
-      opacity: 0;
-      transition-delay: 700ms;
+
+      h1 {
+        color: transparent;
+        text-shadow: 0 0 50px $main-blue;
+        opacity: 0;
+        transform: scaleX(1.5);
+      }
     }
 
     .main-words {
@@ -716,8 +733,8 @@ section.section-home-contact {
         margin-right: 10%;
         margin-left: 0;
         opacity: 0;
-        transform: translateX(100px);
-        transition-delay: 900ms;
+        transform: scaleX(1.5);
+        transition-delay: 1000ms;
       }
     }
   }
@@ -725,13 +742,16 @@ section.section-home-contact {
   &.active {
     .mainContainer.splitSection {
       .main-heading {
-        transform: translateX(0);
-        opacity: 1;
+        h1 {
+          text-shadow: 0 0 1px $main-blue;
+          opacity: 1;
+          transform: scaleX(1);
+        }
       }
 
       .main-words {
         .section-words {
-          transform: translateX(0);
+          transform: scaleX(1);
           opacity: 1;
         }
       }
@@ -761,31 +781,10 @@ section.section-home-contact {
     .mainContainer.splitSection {
       margin-bottom: 200px;
 
-      .main-heading {
-        transform: translateX(0) translateY(100px);
-      }
-
       .main-words {
         .section-words {
           margin-right: auto;
           margin-left: auto;
-          transform: translateX(0) translateY(100px);
-        }
-      }
-    }
-
-    &.active {
-      .mainContainer.splitSection {
-        .main-heading {
-          transform: translateY(0);
-          opacity: 1;
-        }
-
-        .main-words {
-          .section-words {
-            transform: translateY(0);
-            opacity: 1;
-          }
         }
       }
     }
