Updateds with new patches

--- a/views/home.html
+++ b/views/home.html
@@ -63,18 +63,54 @@
             <div class="mainContainer splitSection">
                 <div class="fix-container">
                     <div class="main-heading">
-                        <h1 class="easingClass">who<span class="md-br">we</span><span class="md-br">are</span></h1>
+                        <h1 class="easingClass">who <span class="largeYellow"> we</span> are</h1>
                     </div>
 
                     <div class="main-words">
                         <div class="section-words easingClass">
-                            <h1>Who</h1>
-                            <p>Specializing in the whole spectrum of branding, we help our clients with existing or new brands build strategic plans, conceptualize and establish an impactful visual identity that reflects the brand's heart and soul. Our projects cover a large variety of industries, some of which include real estate property management / developers, fashion, pharmaceuticals, jewelry showcase designs, co-working spaces, retail sourcing agencies and more.</p>
+                            <p>We help our clients develop comprehensive brand strategies that allow for greater exposure and connection with their target customer bases. We focus on both the brand’s visual identity and voice, ensuring that people see and hear a true reflection of the brand’s heart and soul.</p>
                         </div>
 
                         <div class="section-words easingClass">
-                            <h1>Wesuperseed community</h1>
-                            <p>WeSuperseed is a community of likeminded, multi-cultrual, innovative, passionate creators at heart aiming to use innovation and divergent creativity to alter and inspire minds. At WeSuperseed, we're always looking for creative minds to join us. We're aiming to grow a platform of creative thinkers that may be looking for work or that need assistance with their projects on hand.</p>
+                            <p class="about-miniheading">Our services</p>
+                            <p>We offer clients with customized solutions to fit their individual branding needs. We specialize in the whole spectrum of branding, including:</p>
+                            <ul>
+                                <li>Logo design and identity development</li>
+                                <li>Website design and construction</li>
+                                <li>Brand collateral</li>
+                                <li>Marketing strategies and campaigns</li>
+                                <li>Content creation</li>
+                                <li>Packaging design</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="section section-home-community">
+            <div class="pattern-container full-pattern" id="patternFour">
+                <figure class="full-imgs full-seeds-img">
+                    <img src="/images/main/full-seeds.svg" alt="">
+                </figure>
+                <figure class="full-imgs full-lines-img">
+                    <img src="/images/main/full-lines.svg" alt="">
+                </figure>
+            </div>
+
+            <div class="mainContainer splitSection">
+                <div class="fix-container">
+                    <div class="main-heading">
+                        <h1 class="easingClass"><span class="offCenter">our</span> <span class="largeYellow"> community</span></h1>
+                    </div>
+
+                    <div class="main-words">
+                        <div class="section-words easingClass">
+                            <p>At WeSuperseed, we have begun building a network of talented, multi-cultural and innovative individuals who are interested in brand strategy and design. Our aim is to create a collaborative platform for creative thinkers that are looking for work or that require assistance with a project on hand. The aim of this platform is to bridge and build a tighter knit creative community, while the growth will increase the manpower available allowing us to offer our clients a wider range of services and shorter response times.</p>
+                        </div>
+
+                        <div class="section-words easingClass">
+                            <p>We are always looking for creative minds that align with our vision and join our Community. If you think you would be a good fit and have the skills and determination to help drive our platform forward, or if you need assistance on a current project and are looking for help from likeminded creative individuals, let us know how we can work together.</p>
                         </div>
                     </div>
                 </div>
@@ -82,7 +118,7 @@
         </section>
 
         <section class="section section-home-clients yellowBg">
-            <div class="pattern-container border-pattern" id="patternFour">
+            <div class="pattern-container border-pattern" id="patternFive">
                 <figure class="border-imgs border-seeds-img">
                     <img src="/images/main/border-seeds.svg" alt="">
                 </figure>
@@ -109,6 +145,12 @@
 
         <section class="section section-home-contact">
             <div class="mainContainer splitSection">
+                <figure class="bigseed-img bigseed-left">
+                    <img src="/images/main/big-seed.svg" alt="">
+                </figure>
+                <figure class="bigseed-img bigseed-right">
+                    <img src="/images/main/big-seed.svg" alt="">
+                </figure>
                 <div class="fix-container">
                     <div class="main-heading">
                         <h1 class="easingClass">let's<span class="md-br">have a</span><span class="md-br">chat</span></h1>
@@ -116,7 +158,9 @@
 
                     <div class="main-words">
                         <div class="section-words easingClass">
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda quas, eos officia facere repudiandae dolore obcaecati rem cum nam, ut sed amet eaque numquam. Debitis incidunt voluptatibus fuga quibusdam error.</p>
+                            <p>Are you interested in our services or in need of our expertise?<br><br>
+                            Want to join our Community?<br><br>
+                            We are here to help and are always happy to hear from you, so get in touch with us today!</p>
                         </div>
                     </div>
                 </div>
