--- a/public/css/global.css
+++ b/public/css/global.css
@@ -146,6 +146,11 @@ p {
   line-height: 130%;
 }
 
+ul li {
+  letter-spacing: 1.3px;
+  line-height: 130%;
+}
+
 /**
  * Button styles
  */
@@ -188,9 +193,13 @@ section.section {
 
   .fix-container {
     display: flex;
-    flex-flow: row wrap;
+    flex-flow: column wrap;
     height: 100%;
     width: 100%;
+
+    .main-heading {
+      margin-bottom: 40px;
+    }
   }
 
   &.yellowBg {
@@ -229,6 +238,12 @@ section.section {
       }
 
       &#patternFour {
+        .full-imgs {
+          transform: translateY(50%);
+        }
+      }
+
+      &#patternFive {
         .border-imgs {
           transform: translateY(0);
         }
@@ -301,6 +316,27 @@ section.section {
     &#patternFour {
       bottom: 0;
 
+      .full-imgs {
+        transform: translateY(150%);
+
+        &.full-seeds-img {
+          position: absolute;
+          top: 0;
+          left: 0;
+          width: 100%;
+          transition: 400ms all ease;
+          transition-delay: 400ms;
+        }
+
+        &.full-lines-img {
+          transition: 800ms all ease;
+        }
+      }
+    }
+
+    &#patternFive {
+      bottom: 0;
+
       .border-imgs {
         transform: translateY(150%);
 
@@ -350,7 +386,13 @@ section.section {
       h1 {
         color: $main-blue;
         letter-spacing: 2.2px;
-        font-size: 60px;
+        font-size: 54px;
+
+        span.largeYellow {
+          font-weight: 600;
+          color: $main-yellow;
+          font-size: 64px;
+        }
       }
     }
 
@@ -370,6 +412,20 @@ section.section {
         font-weight: 300;
         color: $main-blue;
       }
+
+      ul {
+        list-style: none;
+
+        li {
+          color: $main-blue;
+          font-size: 16px;
+          font-weight: 300;
+
+          &:before {
+            content: '- ';
+          }
+        }
+      }
     }
   }
 }
@@ -386,13 +442,15 @@ section.section {
 
           h1 {
             font-size: 48px;
+
+            span.largeYellow {
+              font-size: 54px;
+            }
           }
         }
 
         .main-words {
           .section-words {
-            width: 75%;
-            margin: 0 auto 60px;
           }
         }
       }
@@ -415,6 +473,10 @@ section.section {
         h1 {
           font-size: 36px;
           text-align: center;
+
+          span.largeYellow {
+            font-size: 42px;
+          }
         }
       }
 
@@ -426,6 +488,10 @@ section.section {
 
           h1 {
             font-size: 26px;
+
+            span.largeYellow {
+              font-size: 42px;
+            }
           }
         }
 
@@ -439,6 +505,10 @@ section.section {
             }
 
             p {
+              font-size: 12px;
+            }
+
+            ul li {
               font-size: 12px;
             }
           }
@@ -565,41 +635,36 @@ section.section-home-main {
 section.section-home-about {
   .mainContainer {
     .fix-container {
+      flex-flow: column wrap;
       max-width: 950px;
       margin: 0 auto;
-
-      .main-heading {
-        flex: 0 1 33.33%;
-      }
-
-      .main-words {
-        flex: 0 1 66.66%;
-      }
-
     }
 
     .main-heading {
       h1 {
-        color: transparent;
-        text-shadow: 0 0 50px $main-blue;
+        transition-delay: 1000ms;
         opacity: 0;
-        transform: scaleX(1.5);
       }
     }
 
     .section-words {
-      margin-right: 10%;
-      margin-bottom: 80px;
+      margin-left: auto;
+      margin-right: auto;
+      width: 80%;
+      max-width: 760px;
+      margin-bottom: 20px;
       opacity: 0;
 
+      .about-miniheading {
+        margin-bottom: 20px;
+      }
+
       &:nth-of-type(1) {
-        transform: scaleX(1.5);
-        transition-delay: 1200ms;
+        transition-delay: 1300ms;
       }
 
       &:nth-of-type(2) {
-        transform: scaleX(1.5);
-        transition-delay: 1400ms;
+        transition-delay: 1500ms;
       }
     }
   }
@@ -607,22 +672,78 @@ section.section-home-about {
   &.active {
     .main-heading {
       h1 {
-        text-shadow: 0 0 1px $main-blue;
         opacity: 1;
-        transform: scaleX(1);
       }
     }
 
     .section-words {
       opacity: 1;
+    }
+  }
+}
+
+section.section-home-community {
+  .mainContainer {
+    .fix-container {
+      flex-flow: column wrap;
+      max-width: 950px;
+      margin: 0 auto;
+    }
+
+    .main-heading {
+      h1 {
+        transition-delay: 1000ms;
+        opacity: 0;
+
+        span {
+          position: relative;
+
+          &.largeYellow {
+            left: -10px;
+          }
+
+          &.offCenter {
+            position: relative;
+            top: -30px;
+            left: 30px;
+            z-index: 1;
+          }
+        }
+
+      }
+    }
+
+    .section-words {
+      margin-left: auto;
+      margin-right: auto;
+      width: 80%;
+      max-width: 760px;
+      margin-bottom: 20px;
+      opacity: 0;
+
+      .about-miniheading {
+        margin-bottom: 20px;
+      }
 
       &:nth-of-type(1) {
-        transform: scaleX(1);
+        transition-delay: 1300ms;
       }
 
       &:nth-of-type(2) {
-        transform: scaleX(1);
+        transition-delay: 1500ms;
       }
+    }
+  }
+
+  &.active {
+    .main-heading {
+      h1 {
+        opacity: 1;
+      }
+    }
+
+    .section-words {
+      opacity: 1;
     }
   }
 }
@@ -643,10 +764,8 @@ section.section-home-clients {
         margin-bottom: 60px;
 
         h1 {
-          color: transparent;
-          text-shadow: 0 0 50px $main-white;
+          transition-delay: 1000ms;
           opacity: 0;
-          transform: scaleX(1.5);
         }
       }
 
@@ -655,8 +774,7 @@ section.section-home-clients {
         padding: 0 20px;
         margin: 0 auto;
         opacity: 0;
-        transform: scaleX(1.3);
-        transition-delay: 1000ms;
+        transition-delay: 1300ms;
 
         &.clients-desktop {
           max-width: 800px;
@@ -677,14 +795,11 @@ section.section-home-clients {
         .main-heading {
           h1 {
             opacity: 1;
-            text-shadow: 0 0 1px $main-white;
-            transform: scale(1);
           }
         }
 
         .clients-img {
           opacity: 1;
-          transform: scaleX(1)
         }
       }
     }
@@ -714,14 +829,34 @@ section.section-home-contact {
   .mainContainer.splitSection {
     margin-bottom: 200px;
 
+    .bigseed-img {
+      position: absolute;
+
+      &.bigseed-left {
+        top: 0;
+        left: 0;
+        width: 30%;
+        transform: translate(-20%, -20%) rotate(30deg);
+      }
+
+      &.bigseed-right {
+        top: 0;
+        right: 0;
+        width: 25%;
+        transform: translateY(-3%) rotate(-60deg);
+      }
+    }
+
+    .fix-container {
+      flex-flow: row wrap;
+    }
+
     .main-heading {
       flex: 0 1 40%;
 
       h1 {
-        color: transparent;
-        text-shadow: 0 0 50px $main-blue;
+        transition-delay: 1000ms;
         opacity: 0;
-        transform: scaleX(1.5);
       }
     }
 
@@ -733,8 +868,7 @@ section.section-home-contact {
         margin-right: 10%;
         margin-left: 0;
         opacity: 0;
-        transform: scaleX(1.5);
-        transition-delay: 1000ms;
+        transition-delay: 1300ms;
       }
     }
   }
@@ -743,15 +877,12 @@ section.section-home-contact {
     .mainContainer.splitSection {
       .main-heading {
         h1 {
-          text-shadow: 0 0 1px $main-blue;
           opacity: 1;
-          transform: scaleX(1);
         }
       }
 
       .main-words {
         .section-words {
-          transform: scaleX(1);
           opacity: 1;
         }
       }
@@ -810,7 +941,7 @@ footer.footer {
     height: 7px;
     background-color: $main-yellow;
     transition: 800ms all ease;
-    transition-delay: 900ms;
+    transition-delay: 1000ms;
   }
 
   .contact-button {
