Updates superseed to v4 with new changes

--- a/views/home.html
+++ b/views/home.html
@@ -46,7 +46,12 @@
                     </figure>
                 </div>
 
-                <h1 class="splashHeading easingClass">planting seeds of innovation</h1>
+                <div class="headingWrapper">
+                    <h1 class="splashHeading easingClass">planting seeds of innovation</h1>
+
+                    <h1 class="splashSubheading easingClass">a branding, design and marketing consultancy</h1>
+                </div>
+
             </div>
         </section>
 
@@ -63,17 +68,27 @@
             <div class="mainContainer splitSection">
                 <div class="fix-container">
                     <div class="main-heading">
-                        <h1 class="easingClass">who <span class="largeYellow"> we</span> are</h1>
+                        <h1 class="easingClass main-one">who <span class="largeYellow"> we</span> are</h1>
                     </div>
 
                     <div class="main-words">
-                        <div class="section-words easingClass">
-                            <p>We help our clients develop comprehensive brand strategies that allow for greater exposure and connection with their target customer bases. We focus on both the brand’s visual identity and voice, ensuring that people see and hear a true reflection of the brand’s heart and soul.</p>
+                        <div class="section-words easingClass words-one">
+                            <p>WeSuperseed is a community of likeminded, multi-cultural, innovative, passionate creators at heart aiming to use innovation and divergent creativity to alter and inspire minds.</p>
                         </div>
+                    </div>
 
-                        <div class="section-words easingClass">
-                            <p class="about-miniheading">Our services</p>
-                            <p>We offer clients with customized solutions to fit their individual branding needs. We specialize in the whole spectrum of branding, including:</p>
+                    <div class="main-heading">
+                        <h1 class="easingClass main-two">what we <span class="largeYellow"> do</span></h1>
+                    </div>
+
+                    <div class="main-words">
+                        <div class="section-words easingClass words-two">
+                            <p>We think outside the box to create comprehensive brand strategies to help businesses navigate the constantly shifting sands of the digital age and increase their exposure and connection with their target customer bases.</p>
+
+                            <p>Our focus on their brand’s visual identity and voice ensures that people see and hear a true reflection of its heart and soul.</p>
+
+                            <p>We offer clients customized solutions to fit their individual branding needs. We specialize in the whole spectrum of branding, including:</p>
+
                             <ul>
                                 <li>Logo design and identity development</li>
                                 <li>Website design and construction</li>
@@ -144,35 +159,36 @@
         </section>
 
         <section class="section section-home-contact">
-            <div class="mainContainer splitSection">
+            <div class="mainContainer">
                 <figure class="bigseed-img bigseed-left">
                     <img src="/images/main/big-seed.svg" alt="">
                 </figure>
                 <figure class="bigseed-img bigseed-right">
                     <img src="/images/main/big-seed.svg" alt="">
                 </figure>
-                <div class="fix-container">
-                    <div class="main-heading">
-                        <h1 class="easingClass">let's<span class="md-br">have a</span><span class="md-br">chat</span></h1>
-                    </div>
 
-                    <div class="main-words">
-                        <div class="section-words easingClass">
-                            <p>Are you interested in our services or in need of our expertise?<br><br>
-                            Want to join our Community?<br><br>
-                            We are here to help and are always happy to hear from you, so get in touch with us today!</p>
-                        </div>
-                    </div>
+                <div class="main-heading">
+                    <h1 class="easingClass">let's have<br>a chat</span></h1>
+                </div>
+
+                <div class="main-words">
+                    <a class="contact-button" href="mailto:brian@wesuperseed.com">
+                        <h2 class="contact-text easingClass">Plant a seed</h2>
+                        <figure class="contact-img easingClass">
+                            <img src="/images/main/contact-button.png" alt="">
+                        </figure>
+                    </a>
+                </div>
+
+                <div class="backTop easingClass" id="backTop">
+                    <figure class="backTop-img">
+                        <img src="/images/main/backTop.svg" alt="">
+                    </figure>
+                    <p>back<br>to top</p>
                 </div>
             </div>
 
             <footer class="footer">
-                <a class="contact-button" href="mailto:brian@wesuperseed.com">
-                    <h2 class="contact-text easingClass">Plant a seed</h2>
-                    <figure class="contact-img easingClass">
-                        <img src="/images/main/contact-button.png" alt="">
-                    </figure>
-                </a>
                 <div class="footer-contents">
                     <figure class="footer-img">
                         <img src="/images/main/logo-large.svg" alt="">
