--- a/public/css/global.css
+++ b/public/css/global.css
@@ -125,7 +125,7 @@ span.br-mobile {
 
 h1 {
   text-transform: uppercase;
-  letter-spacing: 1px;
+  letter-spacing: 2.2px;
   transition: .2s all;
 }
 
@@ -408,9 +408,10 @@ section.section {
       }
 
       p {
-        font-size: 16px;
+        font-size: 14px;
         font-weight: 300;
         color: $main-blue;
+        margin-bottom: 15px;
       }
 
       ul {
@@ -422,7 +423,11 @@ section.section {
           font-weight: 300;
 
           &:before {
-            content: '- ';
+            content: "• ";
+            color: $main-yellow;
+            font-size: 28px;
+            position: relative;
+            top: 2px;
           }
         }
       }
@@ -479,7 +484,7 @@ section.section {
           text-align: center;
 
           span.largeYellow {
-            font-size: 42px;
+            font-size: inherit;
           }
         }
       }
@@ -535,7 +540,7 @@ and (max-device-width : 1024px) {
 }
 
 .easingClass {
-  transition-timing-function: cubic-bezier(0.16, 0.68, 0.43, 0.99);
+  transition-timing-function: cubic-bezier(0.39, 0.575, 0.565, 1);
   transition-duration: 1000ms;
   transition-property: all;
   transition-delay: 500ms;
@@ -604,11 +609,17 @@ section.section-home-main {
       }
     }
 
+    .headingWrapper {
+      width: 100%;
+      margin-top: 60px;
+    }
+
     h1 {
-      margin-top: 80px;
       color: $main-blue;
       font-weight: 100;
       font-size: 26px;
+      margin-bottom: 30px;
+      text-align: center;
 
       &.splashHeading {
         transform: translateY(100px);
@@ -616,9 +627,23 @@ section.section-home-main {
         transition-delay: 2400ms;
       }
 
+      &.splashSubheading {
+        background-color: $main-yellow;
+        width: 100%;
+        padding: 10px 0;
+        font-size: 18px;
+        transform: scaleX(0);
+        opacity: 0;
+        transition-delay: 2800ms;
+      }
+
       &.animate {
         transform: translateY(0);
         opacity: 1;
+
+        &.splashSubheading {
+          transform: scaleX(1);
+        }
       }
     }
   }
@@ -641,7 +666,13 @@ section.section-home-main {
       }
 
       h1 {
-        margin-left: 20px;
+        &.splashHeading {
+          margin-left: 20px;
+        }
+
+        &.splashSubheading {
+          padding: 10px 20px;
+        }
       }
     }
   }
@@ -656,9 +687,18 @@ section.section-home-about {
     }
 
     .main-heading {
+      margin-bottom: 20px;
+
       h1 {
-        transition-delay: 1000ms;
         opacity: 0;
+        transform: translateY(100px);
+
+        &.main-one {
+          transition-delay: 1000ms;
+        }
+        &.main-two {
+          transition-delay: 1600ms;
+        }
       }
     }
 
@@ -669,17 +709,14 @@ section.section-home-about {
       max-width: 760px;
       margin-bottom: 20px;
       opacity: 0;
+      transform: translateY(100px);
 
-      .about-miniheading {
-        margin-bottom: 20px;
-      }
-
-      &:nth-of-type(1) {
+      &.words-one {
         transition-delay: 1300ms;
       }
 
-      &:nth-of-type(2) {
-        transition-delay: 1500ms;
+      &.words-two {
+        transition-delay: 1900ms;
       }
     }
   }
@@ -688,11 +725,35 @@ section.section-home-about {
     .main-heading {
       h1 {
         opacity: 1;
+        transform: translateY(0);
       }
     }
 
     .section-words {
+      transform: translateY(0);
       opacity: 1;
+    }
+  }
+}
+
+@media (max-width: 768px) {
+  section.section {
+    .mainContainer.splitSection {
+      .main-heading {
+        margin-bottom: 10px;
+
+        h1 {
+          span.largeYellow {
+            font-size: inherit;
+          }
+        }
+      }
+
+      .main-words .section-words {
+        margin: 0 auto;
+        width: 100%;
+        padding: 0 15px;
+      }
     }
   }
 }
@@ -709,19 +770,13 @@ section.section-home-community {
       h1 {
         transition-delay: 1000ms;
         opacity: 0;
+        transform: translateY(100px);
 
         span {
           position: relative;
 
           &.largeYellow {
-            left: -10px;
-          }
-
-          &.offCenter {
-            position: relative;
-            top: -30px;
-            left: 30px;
-            z-index: 1;
+            font-size: inherit;
           }
         }
 
@@ -735,6 +790,7 @@ section.section-home-community {
       max-width: 760px;
       margin-bottom: 20px;
       opacity: 0;
+      transform: translateY(100px);
 
       .about-miniheading {
         margin-bottom: 20px;
@@ -754,11 +810,13 @@ section.section-home-community {
     .main-heading {
       h1 {
         opacity: 1;
+        transform: translateY(0);
       }
     }
 
     .section-words {
       opacity: 1;
+      transform: translateY(0);
     }
   }
 }
@@ -779,8 +837,10 @@ section.section-home-clients {
         margin-bottom: 60px;
 
         h1 {
+          color: $main-white;
           transition-delay: 1000ms;
           opacity: 0;
+          transform: translateY(100px);
         }
       }
 
@@ -789,10 +849,11 @@ section.section-home-clients {
         padding: 0 20px;
         margin: 0 auto;
         opacity: 0;
+        transform: translateY(100px);
         transition-delay: 1300ms;
 
         &.clients-desktop {
-          max-width: 800px;
+          max-width: 900px;
           display: block;
         }
 
@@ -810,11 +871,13 @@ section.section-home-clients {
         .main-heading {
           h1 {
             opacity: 1;
+            transform: translateY(0);
           }
         }
 
         .clients-img {
           opacity: 1;
+          transform: translateY(0);
         }
       }
     }
@@ -841,81 +904,126 @@ section.section-home-clients {
 }
 
 section.section-home-contact {
-  .mainContainer.splitSection {
-    margin-bottom: 200px;
+  .mainContainer {
+    flex-flow: column wrap;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+    padding-bottom: 200px;
+    overflow: hidden;
 
     .bigseed-img {
       position: absolute;
       transition: all 1000ms cubic-bezier(0.175, 0.885, 0.32, 1.275);
       transition-delay: 2000ms;
+      width: 300px;
 
       &.bigseed-left {
         top: 0;
-        left: 0;
-        width: 30%;
-        max-width: 325px;
-        transform: translate(-65%, -20%) rotate(-60deg);
-        transform-origin: bottom left;
+        left: -20px;
+        transform: translateY(-120%);
       }
 
       &.bigseed-right {
-        top: 0;
-        right: 0;
-        width: 25%;
-        max-width: 325px;
-        transform: translate(50%, -30%) rotate(30deg);
-        transform-origin: bottom right;
+        bottom: 200px;
+        right: -20px;
+        transform: translateY(120%);
       }
     }
 
-    .fix-container {
-      flex-flow: row wrap;
-    }
-
     .main-heading {
-      flex: 0 1 40%;
+      text-align: center;
 
       h1 {
         transition-delay: 1000ms;
         opacity: 0;
+        transform: translateY(100px);
       }
     }
 
     .main-words {
-      flex: 0 1 60%;
+      position: relative;
+      top: 80px;
 
-      .section-words {
-        width: 60%;
-        margin-right: 10%;
-        margin-left: 0;
-        opacity: 0;
-        transition-delay: 1300ms;
+      .contact-button {
+        position: relative;
+        display: block;
+        cursor: pointer;
+        overflow: hidden;
+
+        .contact-text {
+          position: absolute;
+          color: $main-yellow;
+          font-weight: 600;
+          bottom: 15px;
+          left: 0;
+          font-size: 18px;
+          opacity: 0;
+          transform: translateY(50px);
+          transition-delay: 1100ms;
+        }
+
+        .contact-img {
+          transform: translateX(-100%);
+          width: 200px;
+          transition-timing-function: cubic-bezier(.68,-.55,.265,1.55);
+          transition-delay: 1200ms;
+        }
+      }
+    }
+
+    .backTop {
+      position: absolute;
+      right: 100px;
+      bottom: 220px;
+      width: 50px;
+      cursor: pointer;
+      transform: translateY(200%);
+      transition-delay: 2800ms;
+
+      p {
+        text-align: center;
+        font-size: 12px;
+        text-transform: uppercase;
+        white-space: nowrap;
       }
     }
   }
 
   &.active {
-    .mainContainer.splitSection {
+    .mainContainer {
       .bigseed-img {
         &.bigseed-left {
-          transform: translate(-65%, -20%) rotate(30deg);
+          transform: translateY(-50%);
         }
 
         &.bigseed-right {
-          transform: translate(50%, -30%) rotate(-50deg);
+          transform: translateY(50%);
         }
       }
 
       .main-heading {
         h1 {
           opacity: 1;
+          transform: translateY(0);
         }
       }
 
       .main-words {
-        .section-words {
-          opacity: 1;
+        .contact-button {
+          .contact-text {
+            opacity: 1;
+            transform: translateY(0);
+          }
+
+          .contact-img {
+            transform: translateX(0);
+          }
         }
+      }
+
+      .backTop {
+        transform: translateY(0);
       }
 
     }
@@ -924,25 +1032,14 @@ section.section-home-contact {
       &:before {
         transform: translateX(-50%) scaleX(1);
       }
-      .contact-button {
-        .contact-text {
-          opacity: 1;
-          transform: translateY(0);
-        }
-
-        .contact-img {
-          transform: translateX(0);
-        }
-      }
     }
   }
 }
 
+
 @media (max-width: 991px) {
   section.section-home-contact {
-    .mainContainer.splitSection {
-      margin-bottom: 200px;
-
+    .mainContainer {
       .fix-container {
         flex-flow: column wrap;
       }
@@ -952,6 +1049,34 @@ section.section-home-contact {
           margin-right: auto;
           margin-left: auto;
         }
+      }
+    }
+  }
+}
+
+@media (max-width: 768px) {
+  section.section-home-contact {
+    .mainContainer {
+      padding-bottom: 170px;
+
+      .bigseed-img {
+        width: 150px;
+
+        &.bigseed-left {
+        }
+
+        &.bigseed-right {
+        }
+      }
+
+      .main-words {
+        position: relative;
+        top: 20px;
+      }
+
+      .backTop {
+        right: 30px;
+        bottom: 180px;
       }
     }
   }
@@ -977,36 +1102,6 @@ footer.footer {
     background-color: $main-yellow;
     transition: 800ms all ease;
     transition-delay: 1000ms;
-  }
-
-  .contact-button {
-    position: absolute;
-    display: block;
-    top: 0;
-    right: 100px;
-    cursor: pointer;
-    overflow: hidden;
-    transform: translateY(-100%);
-    margin-top: -100px;
-
-    .contact-text {
-      position: absolute;
-      color: $main-yellow;
-      font-weight: 600;
-      bottom: 15px;
-      left: 0;
-      font-size: 18px;
-      opacity: 0;
-      transform: translateY(50px);
-      transition-delay: 1100ms;
-    }
-
-    .contact-img {
-      transform: translateX(-100%);
-      width: 200px;
-      transition-timing-function: cubic-bezier(.68,-.55,.265,1.55);
-      transition-delay: 1200ms;
-    }
   }
 
   .footer-contents {
