--- a/views/home.html
+++ b/views/home.html
@@ -50,7 +50,9 @@
                 <div class="headingWrapper">
                     <h1 class="splashHeading easingClass">planting seeds of innovation</h1>
 
-                    <h1 class="splashSubheading easingClass">a branding, design and marketing consultancy</h1>
+                    <h1 class="splashSubheading easingClass">
+                        <span class="subHeadingText easingClass">a branding, design and marketing consultancy</span>
+                    </h1>
                 </div>
 
             </div>
