Makes animation better

--- a/views/home.html
+++ b/views/home.html
@@ -51,6 +51,7 @@
                     <h1 class="splashHeading easingClass">planting seeds of innovation</h1>
 
                     <h1 class="splashSubheading easingClass">
+                        <span class="subHeadingBar easingClass"></span>
                         <span class="subHeadingText easingClass">a branding, design and marketing consultancy</span>
                     </h1>
                 </div>
