--- a/views/home.html
+++ b/views/home.html
@@ -202,7 +202,7 @@
                         <p class="footer-copy">superseed limited all rights reserved.</p>
 
                         <div class="footer-icons">
-                            <a href=""><i class="fa fa-linkedin-square" aria-hidden="true"></i></a>
+                            <a href="https://www.linkedin.com/company/wesuperseed/" target="_blank"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a>
                         </div>
                     </div>
                 </div>
