Remove a span closing tag

--- a/views/home.html
+++ b/views/home.html
@@ -172,7 +172,7 @@
                 </figure>
 
                 <div class="main-heading">
-                    <h1 class="easingClass">let's have<br>a chat</span></h1>
+                    <h1 class="easingClass">let's have<br>a chat</h1>
                 </div>
 
                 <div class="main-words">
