--- a/views/home.html
+++ b/views/home.html
@@ -3,7 +3,63 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Home route</title>
+    <title>WeSuperseed | Marketing. Branding. Design.</title>
+
+    <meta name="description" content="WeSuperseed is marketing, branding, and design company. WeSuperseed is a community of multi-cultural, passionate creators aiming to use innovation & creativity to alter & inspire minds."/>
+    <link rel="canonical" href="http://wesuperseed.com/"/>
+
+    <meta property="og:locale" content="en_US"/>
+    <meta property="og:type" content="website"/>
+    <meta property="og:title" content="WeSuperseed | Marketing. Branding. Design."/>
+    <meta property="og:description" content="WeSuperseed is marketing, branding, and design company. WeSuperseed is a community of multi-cultural, passionate creators aiming to use innovation & creativity to alter & inspire minds."/>
+    <meta property="og:url" content="http://wesuperseed.com/"/>
+    <meta property="og:site_name" content="Wesuperseed"/>
+    <meta property="og:image" content="http://wesuperseed.com/images/main/logo-large.svg"/>
+    <meta property="og:image:width" content="1920"/>
+    <meta property="og:image:height" content="810"/>
+
+    <script type="application/ld+json">
+        {
+            "@context": "http://schema.org",
+            "@type": "WebSite",
+            "name": "WeSuperseed",
+            "url": "http://wesuperseed.com",
+            "image": {
+                "@type": "ImageObject",
+                "url": "https://www.wesuperseed.com/images/main/logo-large.svg",
+                "width": 260,
+                "height": 120
+            },
+            "author": {
+                "@type": "Organization",
+                "name": "WeSuperseed",
+                "logo": {
+                "@type": "ImageObject",
+                    "url": "https://www.wesuperseed.com/images/main/logo-large.svg",
+                    "width": 260,
+                    "height": 120
+                },
+            }
+        }
+    </script>
+
+    <link rel="apple-touch-icon" sizes="57x57" href="/images/favicon/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="/images/favicon/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="/images/favicon/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="/images/favicon/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="/images/favicon/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="/images/favicon/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="/images/favicon/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="/images/favicon/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/images/favicon/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192"  href="/images/favicon/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/images/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="/images/favicon/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/images/favicon/favicon-16x16.png">
+    <link rel="manifest" href="/images/favicon/manifest.json">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-TileImage" content="/images/favicon/ms-icon-144x144.png">
+    <meta name="theme-color" content="#ffffff">
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/jquery.fullpage/2.9.4/jquery.fullpage.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
