--- a/views/home.html
+++ b/views/home.html
@@ -14,7 +14,7 @@
     <meta property="og:description" content="WeSuperseed is marketing, branding, and design company. WeSuperseed is a community of multi-cultural, passionate creators aiming to use innovation & creativity to alter & inspire minds."/>
     <meta property="og:url" content="http://wesuperseed.com/"/>
     <meta property="og:site_name" content="Wesuperseed"/>
-    <meta property="og:image" content="http://wesuperseed.com/images/main/logo-large.svg"/>
+    <meta property="og:image" content="http://wesuperseed.com/images/main/og-shareImage.jpg"/>
     <meta property="og:image:width" content="1920"/>
     <meta property="og:image:height" content="810"/>
 
